// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NowPlaying addTrack returns the correct payload when full data 1`] = `
Object {
  "added_at": "3 hours ago",
  "added_by": "Duncan",
  "album": "Singles",
  "artist": "Future Islands",
  "image": "the-album-art.jpg",
  "last_played": "6 hours ago",
  "metrics": Object {
    "plays": 2,
    "rating": 3,
    "votes": 2,
  },
  "spotify": "https://open.spotify.com/track/uri000",
  "title": "Seasons (Waiting On You)",
  "year": "1983",
}
`;

exports[`NowPlaying addTrack returns the correct payload when partial full data 1`] = `
Object {
  "added_at": "3 hours ago",
  "added_by": "Duncan",
  "album": "Singles",
  "artist": "Future Islands",
  "image": "the-album-art.jpg",
  "last_played": null,
  "metrics": Object {
    "plays": 1,
    "rating": 3,
    "votes": 2,
  },
  "spotify": "https://open.spotify.com/track/uri000",
  "title": "Seasons (Waiting On You)",
  "year": "1983",
}
`;
